@@ -1,3 +1,8 @@
+2019-04-09  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* editor_impl.C rewrap_due_to_updated_position: fix scrolling
+	of centered input fields.
+
 2019-04-08  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* No longer necessary to explicitly save() adjustable table column
